; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_uniw_msa.c_hevc_hz_uniwgt_4t_8x6_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_uniw_msa.c_hevc_hz_uniwgt_4t_8x6_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ff_hevc_mask_arr = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32, i32, i32)* @hevc_hz_uniwgt_4t_8x6_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hz_uniwgt_4t_8x6_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  %26 = alloca i64, align 8
  %27 = alloca i64, align 8
  %28 = alloca i64, align 8
  %29 = alloca i64, align 8
  %30 = alloca i64, align 8
  %31 = alloca i64, align 8
  %32 = alloca i64, align 8
  %33 = alloca i64, align 8
  %34 = alloca i64, align 8
  %35 = alloca i64, align 8
  %36 = alloca i64, align 8
  %37 = alloca i64, align 8
  %38 = alloca i64, align 8
  %39 = alloca i64, align 8
  %40 = alloca i64, align 8
  %41 = alloca i64, align 8
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca i32, align 4
  %47 = alloca i32, align 4
  %48 = alloca i32, align 4
  %49 = alloca i32, align 4
  %50 = alloca i32, align 4
  %51 = alloca i32, align 4
  %52 = alloca i32, align 4
  %53 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32* %2, i32** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %54 = load i32*, i32** @ff_hevc_mask_arr, align 8
  %55 = getelementptr inbounds i32, i32* %54, i64 0
  %56 = call i64 @LD_SB(i32* %55)
  store i64 %56, i64* %28, align 8
  %57 = load i32*, i32** %9, align 8
  %58 = getelementptr inbounds i32, i32* %57, i64 -1
  store i32* %58, i32** %9, align 8
  %59 = load i32*, i32** %13, align 8
  %60 = call i32 @LD_SH(i32* %59)
  store i32 %60, i32* %48, align 4
  %61 = load i32, i32* %48, align 4
  %62 = load i32, i32* %20, align 4
  %63 = load i32, i32* %21, align 4
  %64 = call i32 @SPLATI_H2_SH(i32 %61, i32 0, i32 1, i32 %62, i32 %63)
  %65 = load i32, i32* %14, align 4
  %66 = and i32 %65, 65535
  store i32 %66, i32* %14, align 4
  %67 = load i32, i32* %14, align 4
  %68 = call i32 @__msa_fill_w(i32 %67)
  store i32 %68, i32* %52, align 4
  %69 = load i32, i32* %16, align 4
  %70 = call i32 @__msa_fill_w(i32 %69)
  store i32 %70, i32* %53, align 4
  %71 = load i32, i32* %14, align 4
  %72 = mul nsw i32 %71, 128
  store i32 %72, i32* %14, align 4
  %73 = load i32, i32* %16, align 4
  %74 = sub nsw i32 %73, 6
  store i32 %74, i32* %16, align 4
  %75 = load i32, i32* %14, align 4
  %76 = call i32 @__msa_fill_h(i32 %75)
  store i32 %76, i32* %49, align 4
  %77 = load i32, i32* %15, align 4
  %78 = call i32 @__msa_fill_h(i32 %77)
  store i32 %78, i32* %50, align 4
  %79 = load i32, i32* %16, align 4
  %80 = call i32 @__msa_fill_h(i32 %79)
  store i32 %80, i32* %51, align 4
  %81 = load i32, i32* %49, align 4
  %82 = load i32, i32* %51, align 4
  %83 = call i32 @__msa_srar_h(i32 %81, i32 %82)
  store i32 %83, i32* %49, align 4
  %84 = load i32, i32* %50, align 4
  %85 = load i32, i32* %49, align 4
  %86 = call i32 @__msa_adds_s_h(i32 %84, i32 %85)
  store i32 %86, i32* %50, align 4
  %87 = load i64, i64* %28, align 8
  %88 = add nsw i64 %87, 2
  store i64 %88, i64* %29, align 8
  %89 = load i32*, i32** %9, align 8
  %90 = load i32, i32* %10, align 4
  %91 = load i64, i64* %22, align 8
  %92 = load i64, i64* %23, align 8
  %93 = load i64, i64* %24, align 8
  %94 = load i64, i64* %25, align 8
  %95 = load i64, i64* %26, align 8
  %96 = load i64, i64* %27, align 8
  %97 = call i32 @LD_SB6(i32* %89, i32 %90, i64 %91, i64 %92, i64 %93, i64 %94, i64 %95, i64 %96)
  %98 = load i64, i64* %22, align 8
  %99 = load i64, i64* %23, align 8
  %100 = load i64, i64* %24, align 8
  %101 = load i64, i64* %25, align 8
  %102 = load i64, i64* %26, align 8
  %103 = load i64, i64* %27, align 8
  %104 = call i32 @XORI_B6_128_SB(i64 %98, i64 %99, i64 %100, i64 %101, i64 %102, i64 %103)
  %105 = load i64, i64* %22, align 8
  %106 = load i64, i64* %22, align 8
  %107 = load i64, i64* %22, align 8
  %108 = load i64, i64* %22, align 8
  %109 = load i64, i64* %28, align 8
  %110 = load i64, i64* %29, align 8
  %111 = load i64, i64* %31, align 8
  %112 = load i64, i64* %32, align 8
  %113 = call i32 @VSHF_B2_SB(i64 %105, i64 %106, i64 %107, i64 %108, i64 %109, i64 %110, i64 %111, i64 %112)
  %114 = load i64, i64* %23, align 8
  %115 = load i64, i64* %23, align 8
  %116 = load i64, i64* %23, align 8
  %117 = load i64, i64* %23, align 8
  %118 = load i64, i64* %28, align 8
  %119 = load i64, i64* %29, align 8
  %120 = load i64, i64* %33, align 8
  %121 = load i64, i64* %34, align 8
  %122 = call i32 @VSHF_B2_SB(i64 %114, i64 %115, i64 %116, i64 %117, i64 %118, i64 %119, i64 %120, i64 %121)
  %123 = load i64, i64* %24, align 8
  %124 = load i64, i64* %24, align 8
  %125 = load i64, i64* %24, align 8
  %126 = load i64, i64* %24, align 8
  %127 = load i64, i64* %28, align 8
  %128 = load i64, i64* %29, align 8
  %129 = load i64, i64* %35, align 8
  %130 = load i64, i64* %36, align 8
  %131 = call i32 @VSHF_B2_SB(i64 %123, i64 %124, i64 %125, i64 %126, i64 %127, i64 %128, i64 %129, i64 %130)
  %132 = load i64, i64* %25, align 8
  %133 = load i64, i64* %25, align 8
  %134 = load i64, i64* %25, align 8
  %135 = load i64, i64* %25, align 8
  %136 = load i64, i64* %28, align 8
  %137 = load i64, i64* %29, align 8
  %138 = load i64, i64* %37, align 8
  %139 = load i64, i64* %38, align 8
  %140 = call i32 @VSHF_B2_SB(i64 %132, i64 %133, i64 %134, i64 %135, i64 %136, i64 %137, i64 %138, i64 %139)
  %141 = load i64, i64* %26, align 8
  %142 = load i64, i64* %26, align 8
  %143 = load i64, i64* %26, align 8
  %144 = load i64, i64* %26, align 8
  %145 = load i64, i64* %28, align 8
  %146 = load i64, i64* %29, align 8
  %147 = load i64, i64* %39, align 8
  %148 = load i64, i64* %40, align 8
  %149 = call i32 @VSHF_B2_SB(i64 %141, i64 %142, i64 %143, i64 %144, i64 %145, i64 %146, i64 %147, i64 %148)
  %150 = load i64, i64* %27, align 8
  %151 = load i64, i64* %27, align 8
  %152 = load i64, i64* %27, align 8
  %153 = load i64, i64* %27, align 8
  %154 = load i64, i64* %28, align 8
  %155 = load i64, i64* %29, align 8
  %156 = load i64, i64* %41, align 8
  %157 = load i64, i64* %30, align 8
  %158 = call i32 @VSHF_B2_SB(i64 %150, i64 %151, i64 %152, i64 %153, i64 %154, i64 %155, i64 %156, i64 %157)
  %159 = load i64, i64* %31, align 8
  %160 = load i64, i64* %32, align 8
  %161 = load i32, i32* %20, align 4
  %162 = load i32, i32* %21, align 4
  %163 = call i32 @HEVC_FILT_4TAP_SH(i64 %159, i64 %160, i32 %161, i32 %162)
  store i32 %163, i32* %42, align 4
  %164 = load i64, i64* %33, align 8
  %165 = load i64, i64* %34, align 8
  %166 = load i32, i32* %20, align 4
  %167 = load i32, i32* %21, align 4
  %168 = call i32 @HEVC_FILT_4TAP_SH(i64 %164, i64 %165, i32 %166, i32 %167)
  store i32 %168, i32* %43, align 4
  %169 = load i64, i64* %35, align 8
  %170 = load i64, i64* %36, align 8
  %171 = load i32, i32* %20, align 4
  %172 = load i32, i32* %21, align 4
  %173 = call i32 @HEVC_FILT_4TAP_SH(i64 %169, i64 %170, i32 %171, i32 %172)
  store i32 %173, i32* %44, align 4
  %174 = load i64, i64* %37, align 8
  %175 = load i64, i64* %38, align 8
  %176 = load i32, i32* %20, align 4
  %177 = load i32, i32* %21, align 4
  %178 = call i32 @HEVC_FILT_4TAP_SH(i64 %174, i64 %175, i32 %176, i32 %177)
  store i32 %178, i32* %45, align 4
  %179 = load i64, i64* %39, align 8
  %180 = load i64, i64* %40, align 8
  %181 = load i32, i32* %20, align 4
  %182 = load i32, i32* %21, align 4
  %183 = call i32 @HEVC_FILT_4TAP_SH(i64 %179, i64 %180, i32 %181, i32 %182)
  store i32 %183, i32* %46, align 4
  %184 = load i64, i64* %41, align 8
  %185 = load i64, i64* %30, align 8
  %186 = load i32, i32* %20, align 4
  %187 = load i32, i32* %21, align 4
  %188 = call i32 @HEVC_FILT_4TAP_SH(i64 %184, i64 %185, i32 %186, i32 %187)
  store i32 %188, i32* %47, align 4
  %189 = load i32, i32* %42, align 4
  %190 = load i32, i32* %43, align 4
  %191 = load i32, i32* %44, align 4
  %192 = load i32, i32* %45, align 4
  %193 = load i32, i32* %52, align 4
  %194 = load i32, i32* %50, align 4
  %195 = load i32, i32* %53, align 4
  %196 = load i32, i32* %42, align 4
  %197 = load i32, i32* %43, align 4
  %198 = load i32, i32* %44, align 4
  %199 = load i32, i32* %45, align 4
  %200 = call i32 @HEVC_UNIW_RND_CLIP4_MAX_SATU_H(i32 %189, i32 %190, i32 %191, i32 %192, i32 %193, i32 %194, i32 %195, i32 %196, i32 %197, i32 %198, i32 %199)
  %201 = load i32, i32* %46, align 4
  %202 = load i32, i32* %47, align 4
  %203 = load i32, i32* %52, align 4
  %204 = load i32, i32* %50, align 4
  %205 = load i32, i32* %53, align 4
  %206 = load i32, i32* %46, align 4
  %207 = load i32, i32* %47, align 4
  %208 = call i32 @HEVC_UNIW_RND_CLIP2_MAX_SATU_H(i32 %201, i32 %202, i32 %203, i32 %204, i32 %205, i32 %206, i32 %207)
  %209 = load i32, i32* %43, align 4
  %210 = load i32, i32* %42, align 4
  %211 = load i32, i32* %45, align 4
  %212 = load i32, i32* %44, align 4
  %213 = load i32, i32* %47, align 4
  %214 = load i32, i32* %46, align 4
  %215 = load i32, i32* %17, align 4
  %216 = load i32, i32* %18, align 4
  %217 = load i32, i32* %19, align 4
  %218 = call i32 @PCKEV_B3_UB(i32 %209, i32 %210, i32 %211, i32 %212, i32 %213, i32 %214, i32 %215, i32 %216, i32 %217)
  %219 = load i32, i32* %17, align 4
  %220 = load i32, i32* %18, align 4
  %221 = load i32*, i32** %11, align 8
  %222 = load i32, i32* %12, align 4
  %223 = call i32 @ST_D4(i32 %219, i32 %220, i32 0, i32 1, i32 0, i32 1, i32* %221, i32 %222)
  %224 = load i32, i32* %19, align 4
  %225 = load i32*, i32** %11, align 8
  %226 = load i32, i32* %12, align 4
  %227 = mul nsw i32 4, %226
  %228 = sext i32 %227 to i64
  %229 = getelementptr inbounds i32, i32* %225, i64 %228
  %230 = load i32, i32* %12, align 4
  %231 = call i32 @ST_D2(i32 %224, i32 0, i32 1, i32* %229, i32 %230)
  ret void
}

declare dso_local i64 @LD_SB(i32*) #1

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H2_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @__msa_fill_w(i32) #1

declare dso_local i32 @__msa_fill_h(i32) #1

declare dso_local i32 @__msa_srar_h(i32, i32) #1

declare dso_local i32 @__msa_adds_s_h(i32, i32) #1

declare dso_local i32 @LD_SB6(i32*, i32, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @XORI_B6_128_SB(i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @VSHF_B2_SB(i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @HEVC_FILT_4TAP_SH(i64, i64, i32, i32) #1

declare dso_local i32 @HEVC_UNIW_RND_CLIP4_MAX_SATU_H(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @HEVC_UNIW_RND_CLIP2_MAX_SATU_H(i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @PCKEV_B3_UB(i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ST_D4(i32, i32, i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @ST_D2(i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
